fixed z-index of the modal

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,3 +29,8 @@
 @import 'wizard';
 
 @import 'print';
+
+// HACKY SOLUTION REMOVE THIS AFTER DEMO
+.modal-dialog {
+  z-index: 999 !important;
+}
